--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <address class="contacts">
         <ul class="contacts-list">
           <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="contacts-item"><a class="contacts-link href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -40,12 +40,12 @@
       </section>
 
       <!--benefits-->
-      <section class="Benefits">
+      <section class="benefits">
         <h2 style="display: none">Benefits</h2>
         <ul>
           <li>
             <h3 class="benefits-title">Strategy</h3>
-            <p class="benefits-text">
+            <p class="benefits-description">
               Our goal is to identify the business
               problem to walk away with the
               perfect and creative solution.
@@ -53,7 +53,7 @@
           </li>
           <li>
             <h3 class="benefits-title">Punctuality</h3>
-            <p class="benefits-text">
+            <p class="benefits-description">
               Bring the key message to the
               brand's audience for the best price
               within the shortest possible time.
@@ -61,7 +61,7 @@
           </li>
           <li>
             <h3 class="benefits-title">Diligence</h3>
-            <p class="benefits-text">
+            <p class="benefits-description">
               Research and confirm brands with
               the strongest digital growth
               opportunities and minimize risk.
@@ -69,7 +69,7 @@
           </li>
           <li>
             <h3 class="benefits-title">Technologies</h3>
-            <p benefits-text>
+            <p class="benefits-description">
               Design practice focused on digital
               experiences. We bring forth a deep
               passion for problem-solving.
