--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <!--benefits-->
       <section class="benefits">
         <h2 style="display: none">Benefits</h2>
-        <ul>
-          <li>
+        <ul class="benefits-list">
+          <li class="benefits-item">
             <h3 class="benefits-title">Strategy</h3>
             <p class="benefits-description">
               Our goal is to identify the business
@@ -51,7 +51,7 @@
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="benefits-item">
             <h3 class="benefits-title">Punctuality</h3>
             <p class="benefits-description">
               Bring the key message to the
@@ -59,7 +59,7 @@
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="benefits-item">
             <h3 class="benefits-title">Diligence</h3>
             <p class="benefits-description">
               Research and confirm brands with
@@ -67,7 +67,7 @@
               opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="benefits-item">
             <h3 class="benefits-title">Technologies</h3>
             <p class="benefits-description">
               Design practice focused on digital
@@ -79,42 +79,42 @@
       </section>
 
       <!--team-->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img
+      <section class="team-page">
+        <h2 class="taem-page-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
+            <img class="team-img"
               src="./images/mark-guerrero.jpg"
               width="264"
               alt="Mark Guerrero"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-title">Mark Guerrero</h3>
+            <p class="team-description">Product Designer</p>
           </li>
 
-          <li>
-            <img src="./images/tom-ford.jpg" width="264" alt="Tom Ford" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+          <li class="team-item">
+            <img class="team-img" src="./images/tom-ford.jpg" width="264" alt="Tom Ford" />
+            <h3 class="team-title">Tom Ford</h3>
+            <p class="team-description">Frontend Developer</p>
           </li>
 
-          <li>
-            <img
+          <li class="team-item">
+            <img class="team-img"
               src="./images/camila-garcia.jpg"
               width="264"
               alt="Camila Garcia"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-title">Camila Garcia</h3>
+            <p class="team-description">Marketing</p>
           </li>
-          <li>
-            <img
+          <li class="team-item">
+            <img class="team-img"
               src="./images/daniel-wilson.jpg"
               width="264"
               alt="Daniel Wilson"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-title">Daniel Wilson</h3>
+            <p class="team-description">UI Designer</p>
           </li>
         </ul>
       </section>
