--- a/index.html
+++ b/index.html
@@ -118,6 +118,61 @@
           </li>
         </ul>
       </section>
+
+      <!--portfolio-->
+      <section class="portfolio-page">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <div class="section-one">
+          <ul>
+            <li>
+              <img src="./images/1bankingapp.jpg" 
+              width="264" 
+              alt="Banking App">
+              <h3>Banking App</h3>
+              <p>App</p>
+            </li>
+            <li>
+              <img src="./images/2cashlesspayment.jpg" 
+              width="264" 
+              alt="Cashless Payment">
+              <h3>Cashless Payment</h3>
+              <p>Marketing</p>
+            </li>
+            <li>
+              <img src="./images/3meditationapp.jpg" 
+              width="264" 
+              alt="Meditation App">
+              <h3>Meditation App</h3>
+              <p>App</p>
+            </li>
+          </ul>
+        </div>
+        <div class="section-two">
+          <ul> 
+            <li>
+              <img src="./images/4taxiservice.jpg" 
+              width="264"
+              alt="Taxi Service">
+              <h3>Taxi Service</h3>
+              <p>Marketing</p>
+            </li>
+            <li>
+              <img src="./images/5screenillustrations.jpg" 
+              width="264"
+              alt="Screen Illustrations">
+              <h3>Screen Illustrations</h3>
+              <p>Design</p>
+            </li>
+            <li>
+              <img src="./images/6onlinecurses.jpg" 
+              width="264"
+              alt="Online Courses">
+              <h3>Online Courses</h3>
+              <p>Marketing</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <footer class="page-footer">
