--- a/index.html
+++ b/index.html
@@ -121,54 +121,54 @@
 
       <!--portfolio-->
       <section class="portfolio-page">
-        <h2 class="portfolio-title">Our Portfolio</h2>
+        <h2 class="portfolio-page-title">Our Portfolio</h2>
         <div class="section-one">
-          <ul>
-            <li>
-              <img src="./images/1bankingapp.jpg" 
+          <ul class="section-one-list">
+            <li class="section-one-item">
+              <img class="cards-content" src="./images/bankingapp.jpg" 
               width="264" 
               alt="Banking App">
-              <h3>Banking App</h3>
-              <p>App</p>
+              <h3 class="portfolio-title">Banking App</h3>
+              <p class="portfolio-text">App</p>
             </li>
-            <li>
-              <img src="./images/2cashlesspayment.jpg" 
+            <li class="section-one-item">
+              <img class="cards-content" src="./images/cashlesspayment.jpg" 
               width="264" 
               alt="Cashless Payment">
-              <h3>Cashless Payment</h3>
-              <p>Marketing</p>
+              <h3 class="portfolio-title">Cashless Payment</h3>
+              <p class="portfolio-text">Marketing</p>
             </li>
-            <li>
-              <img src="./images/3meditationapp.jpg" 
+            <li class="section-one-item">
+              <img class="cards-content" src="./images/meditationapp.jpg" 
               width="264" 
               alt="Meditation App">
-              <h3>Meditation App</h3>
-              <p>App</p>
+              <h3 class="portfolio-title">Meditation App</h3>
+              <p class="portfolio-text">App</p>
             </li>
           </ul>
         </div>
         <div class="section-two">
           <ul> 
             <li>
-              <img src="./images/4taxiservice.jpg" 
+              <img class="cards-content" src="./images/taxiservice.jpg" 
               width="264"
               alt="Taxi Service">
-              <h3>Taxi Service</h3>
-              <p>Marketing</p>
+              <h3 class="portfolio-title">Taxi Service</h3>
+              <p class="portfolio-text">Marketing</p>
             </li>
             <li>
-              <img src="./images/5screenillustrations.jpg" 
+              <img class="cards-content" src="./images/screenillustrations.jpg" 
               width="264"
               alt="Screen Illustrations">
-              <h3>Screen Illustrations</h3>
-              <p>Design</p>
+              <h3 class="portfolio-title">Screen Illustrations</h3>
+              <p class="portfolio-text">Design</p>
             </li>
             <li>
-              <img src="./images/6onlinecurses.jpg" 
+              <img class="cards-content" src="./images/onlinecurses.jpg" 
               width="264"
               alt="Online Courses">
-              <h3>Online Courses</h3>
-              <p>Marketing</p>
+              <h3 class="portfolio-title">Online Courses</h3>
+              <p class="portfolio-text">Marketing</p>
             </li>
           </ul>
         </div>
@@ -177,7 +177,7 @@
 
     <footer class="page-footer">
       <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio </span></a>
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
