--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio </span></a>
         <ul class="nav-list">
           <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
-          <li class="nav-item"><a class="nav-link" href="Portfolio">Portfolio</a></li>
-          <li class="nav-item"><a class="nav-link" href="Contacts">Contacts</a></li>
+          <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+          <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="contacts">
@@ -122,7 +122,6 @@
       <!--portfolio-->
       <section class="portfolio-page">
         <h2 class="portfolio-page-title">Our Portfolio</h2>
-        <div class="section-one">
           <ul class="section-one-list">
             <li class="section-one-item">
               <img class="cards-content" src="./images/bankingapp.jpg" 
@@ -146,24 +145,22 @@
               <p class="portfolio-text">App</p>
             </li>
           </ul>
-        </div>
-        <div class="section-two">
-          <ul> 
-            <li>
+          <ul class="section-two-list"> 
+            <li class="section-two-item">
               <img class="cards-content" src="./images/taxiservice.jpg" 
               width="360"
               alt="Taxi Service">
               <h3 class="portfolio-title">Taxi Service</h3>
               <p class="portfolio-text">Marketing</p>
             </li>
-            <li>
+            <li class="section-two-item">
               <img class="cards-content" src="./images/screenillustrations.jpg" 
               width="360"
               alt="Screen Illustrations">
               <h3 class="portfolio-title">Screen Illustrations</h3>
               <p class="portfolio-text">Design</p>
             </li>
-            <li>
+            <li class="section-two-item">
               <img class="cards-content" src="./images/onlinecurses.jpg" 
               width="360"
               alt="Online Courses">
@@ -171,8 +168,7 @@
               <p class="portfolio-text">Marketing</p>
             </li>
           </ul>
-        </div>
-      </section>
+        </section>
     </main>
 
     <footer class="page-footer">
