--- a/index.html
+++ b/index.html
@@ -122,45 +122,43 @@
       <!--portfolio-->
       <section class="portfolio-page">
         <h2 class="portfolio-page-title">Our Portfolio</h2>
-          <ul class="section-one-list">
-            <li class="section-one-item">
+          <ul class="section-portfolio-list">
+            <li class="portfolio-item">
               <img class="cards-content" src="./images/bankingapp.jpg" 
               width="360" 
               alt="Banking App">
               <h3 class="portfolio-title">Banking App</h3>
               <p class="portfolio-text">App</p>
             </li>
-            <li class="section-one-item">
+            <li class="portfolio-item">
               <img class="cards-content" src="./images/cashlesspayment.jpg" 
               width="360" 
               alt="Cashless Payment">
               <h3 class="portfolio-title">Cashless Payment</h3>
               <p class="portfolio-text">Marketing</p>
             </li>
-            <li class="section-one-item">
+            <li class="portfolio-item">
               <img class="cards-content" src="./images/meditationapp.jpg" 
               width="360" 
               alt="Meditation App">
               <h3 class="portfolio-title">Meditation App</h3>
               <p class="portfolio-text">App</p>
             </li>
-          </ul>
-          <ul class="section-two-list"> 
-            <li class="section-two-item">
+            <li class="portfolio-item">
               <img class="cards-content" src="./images/taxiservice.jpg" 
               width="360"
               alt="Taxi Service">
               <h3 class="portfolio-title">Taxi Service</h3>
               <p class="portfolio-text">Marketing</p>
             </li>
-            <li class="section-two-item">
+            <li class="portfolio-item">
               <img class="cards-content" src="./images/screenillustrations.jpg" 
               width="360"
               alt="Screen Illustrations">
               <h3 class="portfolio-title">Screen Illustrations</h3>
               <p class="portfolio-text">Design</p>
             </li>
-            <li class="section-two-item">
+            <li class="portfolio-item">
               <img class="cards-content" src="./images/onlinecurses.jpg" 
               width="360"
               alt="Online Courses">
